# GreySeal

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/roncho/greyseal/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment-ui.glsl  fragment.glsl  vertex-ui.glsl  vertex.glsl
app/src/main/assets/internal/: fragment-red.glsl  vertex-bland.glsl
app/src/main/assets/presets/: green-cube.ntt  ground1.ntt  laser.ntt  player.ntt  ufo.ntt
app/src/main/assets/presets/decor/: rock0.ntt  tree0.ntt
app/src/main/assets/textures/: white
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gles/: gl_core.cpp  material.cpp  mesh.cpp  scene.cpp  texture.cpp
app/src/main/cpp/gs_android/: gs_assets.cpp
app/src/main/cpp/headers/: gs_android.h  jseal.h  sealog.h
app/src/main/cpp/headers/debug/: clock.h
app/src/main/cpp/headers/greyseal/: callbacks.h  calls.h  color.h  font.h  gl.h  initialize.h  material.h  math.h  matrix.h  mesh.h  object.h  preset.h  quaternion.h  scene.h  texture.h  threading.h  ui.h  vector3.h
app/src/main/cpp/ntt/: ntt.c  ntte.c  nttnum.c
app/src/main/cpp/ntt/include/: seal.ntt.h
app/src/main/cpp/seal/: bytestream.cpp  gl_core.cpp  jseal.cpp  preset.cpp  scene.cpp  seal_calls.cpp  texture.cpp  threading.cpp
app/src/main/cpp/seal/engine/: font.cpp  initialize.cpp  material.cpp  mesh.cpp  preset.cpp  texture.cpp  uio.cpp
app/src/main/cpp/seal/ntt/: ntt.c  ntt.h  ntte.c
app/src/main/java/com/roncho/greyseal/: MainActivity.java
app/src/main/java/com/roncho/greyseal/engine/: Color.java  GreySealEngineActivity.java  Quaternion.java  Rect.java  SealCamera.java  SealEngine.java  SealEngineActivity.java  SealLog.java  SealMath.java  SealMetrics.java  Time.java  TouchInput.java  Tuple.java  UI.java  Vector2.java  Vector3.java
app/src/main/java/com/roncho/greyseal/engine/android/: GreySealRenderer.java  GreySealSurfaceView.java  GreySealTexturePipeline.java  Input.java  SealRenderer.java  (+2 more)
app/src/main/java/com/roncho/greyseal/game/: GameActivity.java  GameAssets.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/roncho/greyseal/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
